--- a/Projeto/Arquivos Html/pagina01.html
+++ b/Projeto/Arquivos Html/pagina01.html
@@ -27,8 +27,13 @@
             <img src="imagens/log2.jpg" alt="some text" width=300 height=200>
             <img src="imagens/log1.jpg" alt="some text" width=300 height=200>
             <p> Valor mínimo de horas são: 10 reais</p>
-            <p> Que tal você jogar bebendo aquele refri ou comendo aquele petisto? </p>
-            <h4>Confira nossos preços abaixo:</h4>
+            <p>Que tal você jogar bebendo aquele refri?</p>
+            <p>Comendo aquele petisto?</p>
+            <p>Tomando aquela gelada? </p>
+            <p>Comendo nossas deliciosas guloseimas?</p>
+
+            <h4>Aqui você pode</h4>
+            <h3>Confira nossos preços abaixo:</h3>
              </div>
 
                 <form>
